--- a/styles/components/_form.scss
+++ b/styles/components/_form.scss
@@ -93,4 +93,25 @@
         }
 
     }
+
+    select {
+        background-image: url('../../images/icons/ic-ic-arch-down.svg');
+        background-repeat: no-repeat, repeat;
+        background-position: left .8rem top 50%, 0 0;
+        -webkit-appearance: none;
+        -moz-appearance: none;
+        appearance: none;
+
+        // option {
+            color: $color-gray;
+            font-size: 1.1rem;
+        // }
+    }
+
+    .datepicker {
+        background-image: url('../../images/icons/calendar-interface-symbol-tool.svg');
+        background-repeat: no-repeat, repeat;
+        background-position: left .8rem top 50%, 0 0;
+        background-size: 1.5rem 1.5rem;
+    }
 }
