--- a/styles/main.css
+++ b/styles/main.css
@@ -861,22 +861,38 @@ body {
 .media-card {
   border-radius: 8px;
   overflow: hidden;
-  position: relative; }
+  position: relative;
+  margin-top: 1.5rem; }
   .media-card > img {
     width: 100%;
     height: 300px;
     object-fit: cover; }
-  .media-card .date {
+  .media-card .overlay {
     position: absolute;
-    bottom: 1rem;
-    right: 1.5rem;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    width: 100%;
+    height: 100%;
     display: flex;
-    align-items: center;
+    flex-direction: column;
+    justify-content: flex-end;
+    padding: 1.5rem;
     color: #FFF;
-    font-size: .8rem; }
-    .media-card .date img {
-      height: 1rem;
-      margin-left: .5rem; }
+    background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0) 45%, #000 86%);
+    opacity: 0.7; }
+    .media-card .overlay .date {
+      display: flex;
+      align-items: center;
+      font-size: .85rem;
+      color: #bfbfbf; }
+      .media-card .overlay .date img {
+        height: 1rem;
+        margin-left: .5rem; }
+    .media-card .overlay .heading {
+      font-size: 1.2rem;
+      margin-top: .5rem; }
 
 .about-page {
   background-color: #f8f8f9; }
@@ -1400,9 +1416,58 @@ body {
         font-size: .9rem;
         color: #b7b7b8; }
 
-.news-page {
+.media-page {
   background-color: #f5f5f5;
   padding-top: 2rem;
   padding-bottom: 2rem; }
-  .news-page .heading {
+  .media-page .heading {
     margin-top: 2rem; }
+  .media-page .modal {
+    padding-right: 0 !important; }
+    .media-page .modal .modal-dialog {
+      max-width: 100%;
+      min-height: 100%;
+      margin: 0; }
+      .media-page .modal .modal-dialog .modal-content {
+        height: 100vh;
+        border: none;
+        border-radius: 0; }
+        .media-page .modal .modal-dialog .modal-content .modal-header {
+          background-color: #000;
+          border-radius: 0;
+          border: none; }
+          .media-page .modal .modal-dialog .modal-content .modal-header .close {
+            font-size: 3rem;
+            color: #FFF;
+            opacity: 1;
+            text-shadow: none; }
+            .media-page .modal .modal-dialog .modal-content .modal-header .close:focus {
+              outline: none; }
+        .media-page .modal .modal-dialog .modal-content .modal-body {
+          background-color: #000; }
+          .media-page .modal .modal-dialog .modal-content .modal-body .slider-for,
+          .media-page .modal .modal-dialog .modal-content .modal-body .slider-nav {
+            width: 80%;
+            margin: 0 auto; }
+          .media-page .modal .modal-dialog .modal-content .modal-body .slider-for .main-img {
+            display: flex;
+            justify-content: center; }
+            .media-page .modal .modal-dialog .modal-content .modal-body .slider-for .main-img img {
+              height: 450px;
+              width: 100%;
+              object-fit: cover; }
+          .media-page .modal .modal-dialog .modal-content .modal-body .slider-for .slick-next::before,
+          .media-page .modal .modal-dialog .modal-content .modal-body .slider-for .slick-prev::before {
+            display: none; }
+          .media-page .modal .modal-dialog .modal-content .modal-body .slider-for .slick-prev {
+            right: -70px; }
+          .media-page .modal .modal-dialog .modal-content .modal-body .slider-for .slick-next {
+            left: -70px; }
+          .media-page .modal .modal-dialog .modal-content .modal-body .slider-nav {
+            margin-top: 1.5rem; }
+            .media-page .modal .modal-dialog .modal-content .modal-body .slider-nav .thum-img {
+              padding: 0 .75rem; }
+              .media-page .modal .modal-dialog .modal-content .modal-body .slider-nav .thum-img img {
+                height: 100px;
+                width: 100%;
+                object-fit: cover; }
