--- a/styles/pages/_media.scss
+++ b/styles/pages/_media.scss
@@ -1,10 +1,97 @@
-.news-page {
+.media-page {
     background-color: $color-white-smoke;
     padding-top: 2rem;
     padding-bottom: 2rem;
 
     .heading {
         margin-top: 2rem;
+    }
+
+    .modal {
+        padding-right: 0 !important;
+
+        .modal-dialog {
+            max-width: 100%;
+            min-height: 100%;
+            margin: 0;
+
+            .modal-content {
+                height: 100vh;
+                border: none;
+                border-radius: 0;
+
+                .modal-header {
+                    background-color: $color-black;
+                    border-radius: 0;
+                    border: none;
+
+                    .close {
+                        &:focus {
+                            outline: none;
+                        }
+                        
+                        font-size: 3rem;
+                        color: $color-white;
+                        opacity: 1;
+                        text-shadow: none;
+                    }
+                }
+
+                .modal-body {
+                    background-color: $color-black;
+
+                    .slider-for,
+                    .slider-nav {
+                        width: 80%;
+                        margin: 0 auto;
+                    }
+
+                    .slider-for {
+
+                        .main-img {
+                            display: flex;
+                            justify-content: center;
+
+                            img {
+                                height: 450px;
+                                width: 100%;
+                                object-fit: cover;
+                            }
+                        }
+
+                        .slick-next,
+                        .slick-prev {
+
+                            &::before {
+                                display: none;
+                            }
+                        }
+
+                        .slick-prev {
+                            right: -70px;
+                        }
+
+                        .slick-next {
+                            left: -70px;
+                        }
+                    }
+
+                    .slider-nav {
+                        margin-top: 1.5rem;
+
+                        .thum-img {
+                            padding: 0 .75rem;
+
+                            img {
+                                height: 100px;
+                                width: 100%;
+                                object-fit: cover;
+                            }
+                        }
+                    }
+                }
+            }
+        }
     }
 
 }
